配置maven 上传lib到本地仓库
Signed-off-by: niangegelaile <13750523051@163.com>

--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -29,3 +29,12 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.0'
     testCompile 'junit:junit:4.12'
 }
+apply plugin: 'maven'
+
+uploadArchives {
+    repositories.mavenDeployer {
+        repository(url: LOCAL_REPO_URL)
+        pom.groupId = PROJ_GROUP
+        pom.artifactId = PROJ_ARTIFACTID
+        pom.version = PROJ_VERSION      }
+}
