--- a/gradle.properties
+++ b/gradle.properties
@@ -17,26 +17,26 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 
 # 包信息
-PROJ_GROUP=com.ange.angelib
+PROJ_GROUP=cn.com.ange.lib
 PROJ_VERSION=1.0.0
 
-# 项目的描述
-PROJ_WEBSITEURL=https://github.com/niangegelaile/AngeLib   //项目地址
-PROJ_VCSURL=https://github.com/niangegelaile/AngeLib.git   //项目所在vcs地址
-PROJ_DESCRIPTION=a android lib //说明
-PROJ_ISSUETRACKERURL=https://github.com/niangegelaile/AngeLib  //问题反馈地址
-
-# Licence信息
-PROJ_LICENCE_NAME=The Apache Software License, Version 2.0
-PROJ_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
-PROJ_LICENCE_DEST=repo
-
-
-# Developer 信息
-DEVELOPER_ID=niangegelaile  //开发者id
-DEVELOPER_NAME=liquanan  //开发者姓名
-DEVELOPER_EMAIL=13750523051@139.com //开发者email
-
-
-BINTRAY_USER=niangegelaile       //bintray的用户名
-BINTRAY_KEY=f737c775ed43168a37d9e903ed41960e7d552a98      //bintray的key值
+## 项目的描述
+#PROJ_WEBSITEURL=https://github.com/niangegelaile/AngeLib   //项目地址
+#PROJ_VCSURL=https://github.com/niangegelaile/AngeLib.git   //项目所在vcs地址
+#PROJ_DESCRIPTION=a android lib //说明
+#PROJ_ISSUETRACKERURL=https://github.com/niangegelaile/AngeLib  //问题反馈地址
+#
+## Licence信息
+#PROJ_LICENCE_NAME=The Apache Software License, Version 2.0
+#PROJ_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
+#PROJ_LICENCE_DEST=repo
+#
+#
+## Developer 信息
+#DEVELOPER_ID=niangegelaile  //开发者id
+#DEVELOPER_NAME=liquanan  //开发者姓名
+#DEVELOPER_EMAIL=13750523051@139.com //开发者email
+#
+#
+#BINTRAY_USER=niangegelaile       //bintray的用户名
+#BINTRAY_KEY=f737c775ed43168a37d9e903ed41960e7d552a98      //bintray的key值
