--- a/lib/gradle.properties
+++ b/lib/gradle.properties
@@ -2,5 +2,5 @@ PROJ_NAME=lib
 PROJ_ARTIFACTID=lib
 PROJ_POM_NAME=Ange Lib
 
-LOCAL_REPO_URL=maven.repo.local
+LOCAL_REPO_URL=file:///E/BaiduYunDownload/maven/repository/
 
