成功上传到本地maven仓库
Signed-off-by: niangegelaile <13750523051@163.com>

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,7 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 
 # 包信息
-PROJ_GROUP=cn.com.ange.lib
+PROJ_GROUP=cn.com.ange
 PROJ_VERSION=1.0.0
 
 ## 项目的描述
@@ -40,3 +40,6 @@ PROJ_VERSION=1.0.0
 #
 #BINTRAY_USER=niangegelaile       //bintray的用户名
 #BINTRAY_KEY=f737c775ed43168a37d9e903ed41960e7d552a98      //bintray的key值
+
+
+MAVENURL=file:///E:/BaiduYunDownload/maven/repository/
