--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,7 @@
 
 buildscript {
     repositories {
-        maven{
-            url 'file:///E/BaiduYunDownload/maven/repository/'}
+        maven{ url MAVENURL}
 
         jcenter()
     }
@@ -17,9 +16,8 @@ buildscript {
 
 allprojects {
     repositories {
-
-
         jcenter()
+        maven{ url MAVENURL}
     }
 }
 
