--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     repositories {
 //        maven{ url MAVENURL}
+        maven{ url 'https://dl.bintray.com/cetian/maven'}
         jcenter()
     }
     dependencies {
@@ -17,6 +18,7 @@ allprojects {
     repositories {
         jcenter()
 //        maven{ url MAVENURL}
+        maven{ url 'https://dl.bintray.com/cetian/maven'}
     }
 }
 
